k8s/code-document-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-document-worker-deployment
  labels:
    app: code-document-worker
spec:
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: code-document-worker
  template:
    metadata:
      labels:
        app: code-document-worker
    spec:
      containers:
      - name: code-document-worker
        image: vuvannghiawork/code-document-worker:sha-10eae71
        imagePullPolicy: Always
        ports:
        - containerPort: 52002
        # resources:
        #   limits:
        #     memory: "256Mi"
        #     cpu: "500m"
        #   requests:
        #     memory: "128Mi"
        #     cpu: "250m"
