k8s/code-abcd-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-abcd-service-deployment
  labels:
    app: code-abcd-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-abcd-service
  template:
    metadata:
      labels:
        app: code-abcd-service
    spec:
      containers:
      - name: code-abcd-service
        image: vuvannghiawork/code-abcd-service:sha-207e4b2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: code-abcd-service
spec:
  selector:
    app: code-abcd-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
