k8s/code-chatbot-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-chatbot-service-deployment
  labels:
    app: code-chatbot-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: code-chatbot-service
  template:
    metadata:
      labels:
        app: code-chatbot-service
    spec:
      imagePullSecrets:
      - name: docker-pull-secret
      containers:
      - name: code-chatbot-service
        image: vuvannghiawork/code-chatbot-service:sha-c170697
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 52001
        - name: grpc
          containerPort: 50051
        # resources:
        #   limits:
        #     memory: "256Mi"
        #     cpu: "500m"
        #   requests:
        #     memory: "128Mi"
        #     cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: code-chatbot-service
spec:
  selector:
    app: code-chatbot-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 52001
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-chatbot-voice-deployment
  labels:
    app: code-chatbot-voice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: code-chatbot-voice
  template:
    metadata:
      labels:
        app: code-chatbot-voice
    spec:
      imagePullSecrets:
      - name: docker-pull-secret
      containers:
      - name: code-chatbot-voice
        image: vuvannghiawork/code-chatbot-service:sha-c170697
        imagePullPolicy: Always
        command: ["python"]
        args: ["voice_worker.py", "start"]
        resources:
          limits:
            memory: "2560Mi"  # Nâng mức trần lên 2.5GB (hoặc "2Gi" nếu muốn thử ở mức 2GB trước)
            cpu: "1000m"
          requests:
            memory: "1024Mi"  # Nâng cấu hình tối thiểu lên 1GB
            cpu: "500m"
