k8s/code-conversation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-conversation-service-deployment
  labels:
    app: code-conversation-service
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: code-conversation-service
  template:
    metadata:
      labels:
        app: code-conversation-service
    spec:
      containers:
      - name: code-conversation-service
        image: vuvannghiawork/code-conversation-service:sha-c5c311f
        imagePullPolicy: Always
        ports:
        - containerPort: 33002
        # resources:
        #   limits:
        #     memory: "256Mi"
        #     cpu: "500m"
        #   requests:
        #     memory: "128Mi"
        #     cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: code-conversation-service
spec:
  selector:
    app: code-conversation-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 33002
  type: ClusterIP
