k8s/code-persona-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-persona-service-deployment
  labels:
    app: code-persona-service
spec:
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: code-persona-service
  template:
    metadata:
      labels:
        app: code-persona-service
    spec:
      containers:
      - name: code-persona-service
        image: vuvannghiawork/code-persona-service:sha-676fc4f
        imagePullPolicy: Always
        ports:
        - containerPort: 52003
        volumeMounts:
        - name: data-volume
          mountPath: /app/data
        # resources:
        #   limits:
        #     memory: "256Mi"
        #     cpu: "500m"
        #   requests:
        #     memory: "128Mi"
        #     cpu: "250m"
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: code-persona-service-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: code-persona-service
spec:
  selector:
    app: code-persona-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 52003
  type: ClusterIP
