k8s/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /code-abcd-service
        pathType: Prefix
        backend:
          service:
            name: code-abcd-service
            port:
              number: 80
