k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:

      - path: /code-chatbot-service
        pathType: Prefix
        backend:
          service:
            name: code-chatbot-service
            port:
              number: 80

      - path: /code-conversation-service
        pathType: Prefix
        backend:
          service:
            name: code-conversation-service
            port:
              number: 80


      - path: /code-document-service
        pathType: Prefix
        backend:
          service:
            name: code-document-service
            port:
              number: 80


      - path: /code-persona-service
        pathType: Prefix
        backend:
          service:
            name: code-persona-service
            port:
              number: 80
